--- a/esercizio5/base.css
+++ b/esercizio5/base.css
@@ -2,3 +2,7 @@
   background-color: #eee;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
+
+.cf-error {
+  border: 1px solid red !important;
+}
