- Aggiunto border di errore per il CF - Inizio sviluppo parte 2 - Aggiunto contatore di contatti (localstorage)

--- a/esercizio5/base.css
+++ b/esercizio5/base.css
@@ -6,3 +6,9 @@
 .cf-error {
   border: 1px solid red !important;
 }
+
+#contactCounter {
+  background-color: green;
+  color: white;
+  padding: 5px;
+}
