Bozza lista contatti

--- a/esercizio5/base.css
+++ b/esercizio5/base.css
@@ -12,3 +12,12 @@
   color: white;
   padding: 5px;
 }
+
+#contactBook {
+  max-height: 300px;
+}
+
+.contactListItem {
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
