--- a/esercizio5/base.css
+++ b/esercizio5/base.css
@@ -14,7 +14,7 @@
 }
 
 #contactBook {
-  max-height: 300px;
+  max-height: 400px;
 }
 
 .contactListItem {
@@ -33,4 +33,5 @@
   padding-bottom: 0px;
   margin-top: 5px;
   margin-bottom: 5px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
