--- a/esercizio5/base.css
+++ b/esercizio5/base.css
@@ -24,8 +24,7 @@
 }
 
 #contactCounter {
-  background-color: green;
-  color: white;
+  /*text-shadow: 2px 2px 5px #000000;*/
   padding: 5px;
 }
 
